# weather

./: pyproject.toml  weather.py
tests/: test_weather.py
